--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
@@ -25,6 +27,7 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "prettier": "3.6.2",
     "vite": "^7.0.6",
