--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@eslint/js": "^9.31.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "daisyui": "^5.1.27",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
     "gh-pages": "^6.3.0",
